<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/settings_constraintLayout"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            xmlns:local="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:orientation="vertical"
            local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/infoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="@string/disable_enable_sync"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <ToggleButton
        android:id="@+id/disable_enable_syncBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:checked="true"
        android:textColor="@drawable/sync_state_color"
        android:textOff="@string/sync_off"
        android:textOn="@string/sync_on"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/infoTxt"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/url_textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/server_url_txt"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disable_enable_syncBtn" />


    <EditText
        android:id="@+id/settings_server_urlET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/enter_url_here"
        android:inputType="textUri"
        android:padding="10dp"
        android:text=""
        android:textColor="#000"
        android:textColorHint="#000"
        app:layout_constraintBaseline_toBaselineOf="@+id/url_textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/svaesettBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:padding="16dp"
        android:background="@drawable/roundbutton"
        android:text="Save Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_server_urlET" />

</android.support.constraint.ConstraintLayout>