<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <include layout="@layout/toolbar_layout"
        android:id="@+id/home_toolbar"/>
    <!--<FrameLayout-->
        <!--android:id="@+id/main_frameLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/home_toolbar"-->
        <!--app:layout_constraintStart_toStartOf="parent">-->
        <!--<include layout="@layout/main_dashboard"/>-->

    <!--</FrameLayout>-->

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickCardAction"
            android:id="@+id/sent_messages_cardView"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:gravity="center"
                    android:background="@color/success_msg_color">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/round_message_black_18dp"
                        android:padding="10dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/successful_txt"
                    android:textColor="#000"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="2dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sent_messages_txt"
                    android:id="@+id/sentSuccessfulTV"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:background="@android:color/holo_green_dark"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onClickCardAction"
            android:id="@+id/sending_failed_cardView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:padding="0dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:gravity="center"
                    android:background="@color/failed_msg_color">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/round_sms_failed_black_18dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/failed_txt"
                    android:fontFamily="sans-serif"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="2dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/failedToSyncTV"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/failed_messages_txt"
                    android:fontFamily="sans-serif"
                    android:background="@android:color/holo_orange_dark"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:itemTextColor="#fff"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</android.support.constraint.ConstraintLayout>